--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -27,7 +27,9 @@
 }
 .listItemLabel{
     line-height: 20px;
-
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .selected{
     background: #D4D4D4;
