--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,13 +1,13 @@
 .button{
-    background-color: white;
-    border: 1.2px solid #339933;
+    background-color: #FFFFFF;
+    border: 1px solid #339933;
     border-radius: 4px;
     padding: 14px;
 
     cursor: pointer;
 
     color: #339933;
-    font-family: 'Work Sans';
+    font-family: inherit;
     font-size: 14px;
     line-height: 16px;
     display: flex;
