--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -11,7 +11,7 @@
     flex: 1;
     font-size: 14px;
 
-    font-family: 'Work Sans';
+    font-family: inherit;
 }
 .input:focus-visible{
     outline: none;
